[gd_scene load_steps=3 format=2]

[ext_resource path="res://SelectGameMode.gd" type="Script" id=1]
[ext_resource path="res://Themes/IntroButtonTheme.tres" type="Theme" id=2]

[node name="SelectGameMode" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -308.0
margin_top = -146.0
margin_right = 308.0
margin_bottom = 146.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
margin_right = 616.0
margin_bottom = 292.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SimpleMode" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_right = 616.0
margin_bottom = 70.0
theme = ExtResource( 2 )
text = "Simple Mode"

[node name="SingleTrack" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 616.0
margin_bottom = 144.0
theme = ExtResource( 2 )
text = "Single Track Challenge"

[node name="UniqueStation" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 616.0
margin_bottom = 218.0
theme = ExtResource( 2 )
text = "Unique Station Challenge"

[node name="MegalopolisMode" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 222.0
margin_right = 616.0
margin_bottom = 292.0
theme = ExtResource( 2 )
text = "Megalopolis Mode"

[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/SimpleMode" to="." method="_on_SimpleMode_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/SingleTrack" to="." method="_on_SingleTrack_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/UniqueStation" to="." method="_on_UniqueStation_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/MegalopolisMode" to="." method="_on_MegalopolisMode_pressed"]
